--- a/compression/huffman.ipynb
+++ b/compression/huffman.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,21 +23,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"filled/transact_18_22.csv\")\n",
+    "df = pd.read_csv(\"../processed/transact_18_22.csv\")\n",
     "df.set_index(['client', 'date'], inplace=True)\n",
     "df.index = df.index.set_levels(pd.to_datetime(df.index.levels[1]), level=1)\n",
     "df = df.sort_index()\n",
-    "df"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "870fdfc9",
+   "id": "610c189b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_huffman_ratios(df: pd.DataFrame, columns: list):\n",
+    "def compute_huffman(df: pd.DataFrame, columns: list):\n",
     "    clients = df.index.get_level_values(0).unique()\n",
     "    results = []\n",
     "\n",
@@ -47,14 +46,16 @@
     "        row = {}\n",
     "\n",
     "        for col in columns:\n",
-    "            seq = client_data[col].astype(str).tolist()\n",
-    "\n",
+    "            seq = client_data[col].astype(int).tolist()\n",
     "            codec = HuffmanCodec.from_data(seq)\n",
-    "            encoded = codec.encode(seq)\n",
-    "            original_size = len(seq) * 3\n",
-    "            compressed_size = len(encoded) * 8\n",
-    "            ratio = (compressed_size / original_size)\n",
+    "            code_table = codec.get_code_table()\n",
+    "            compressed_bits = 0\n",
+    "            for symbol in seq:\n",
+    "                bitsize, _ = code_table[symbol]\n",
+    "                compressed_bits += bitsize\n",
     "\n",
+    "            original_bits = len(seq) * 3\n",
+    "            ratio = compressed_bits / original_bits\n",
     "            row[f\"huffman_ratio_{col}\"] = ratio\n",
     "\n",
     "        results.append(pd.Series(row, name=client))\n",
@@ -67,12 +68,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5316161",
+   "id": "e318e824",
    "metadata": {},
    "outputs": [],
    "source": [
-    "huffman_df = compute_huffman_ratios(df, [\"code\"])\n",
-    "huffman_df"
+    "huffman_df = compute_huffman(df, [\"code\"])\n",
+    "huffman_df.head(5)"
    ]
   },
   {
@@ -90,10 +91,9 @@
     "        axes = [axes]\n",
     "\n",
     "    for ax, col in zip(axes, df_huffman.columns):\n",
-    "        sns.histplot(df_huffman[col], bins=30, kde=True, ax=ax, color='skyblue')\n",
-    "        ax.set_title(f'Distribution of huffman_ratio', fontsize=14)\n",
-    "        ax.set_xlabel('Huffman Ratio')\n",
-    "        ax.set_ylabel('Clients')\n",
+    "        sns.histplot(df_huffman[col], bins=20, kde=True, ax=ax, color='skyblue')\n",
+    "        ax.set_xlabel('Отношение размера (применен Хаффман/ оригинал)')\n",
+    "        ax.set_ylabel('Клиенты')\n",
     "        ax.set_xlim(0, max(df_huffman[col].max()*1.1, 1.0))\n",
     "\n",
     "    plt.tight_layout()\n",
