--- a/compression/lzc_1d.ipynb
+++ b/compression/lzc_1d.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,11 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"filled/transact_18_22.csv\")\n",
+    "df = pd.read_csv(\"../processed/transact_18_22.csv\")\n",
     "df.set_index(['client', 'date'], inplace=True)\n",
     "df.index = df.index.set_levels(pd.to_datetime(df.index.levels[1]), level=1)\n",
     "df = df.sort_index()\n",
-    "df"
+    "df.head(5)"
    ]
   },
   {
@@ -38,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_normalized_lzc(df: pd.DataFrame, columns: list):\n",
+    "def compute_lzc(df: pd.DataFrame, columns: list):\n",
     "    clients = df.index.get_level_values(0).unique()\n",
     "    result = []\n",
     "\n",
@@ -49,10 +48,7 @@
     "        for col in columns:\n",
     "            s = ''.join(client_data[col].astype(str).tolist())\n",
     "            lzc = lempel_ziv_complexity(s)\n",
-    "            n = len(s)\n",
-    "            lzc_norm = lzc / (n / np.log2(n))\n",
-    "\n",
-    "            client_row[f'{col}'] = lzc_norm\n",
+    "            client_row[f'{col}'] = lzc\n",
     "\n",
     "        result.append(pd.Series(client_row, name=client))\n",
     "\n",
@@ -69,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_dimensional_lzc = compute_normalized_lzc(df, [\"survival\", \"socialization\", \"self_realization\"])\n",
-    "one_dimensional_lzc"
+    "one_dimensional_lzc = compute_lzc(df, [\"survival\"])\n",
+    "one_dimensional_lzc.head(5)"
    ]
   },
   {
@@ -88,10 +84,10 @@
     "        axes = [axes]\n",
     "\n",
     "    for ax, col in zip(axes, df_lzc.columns):\n",
-    "        sns.histplot(df_lzc[col], bins=10, kde=True, ax=ax, color='skyblue')\n",
-    "        ax.set_title(f'Distribution of {col}', fontsize=14)\n",
-    "        ax.set_xlabel('Normalized Lempel-Ziv Complexity')\n",
-    "        ax.set_ylabel('Clients')\n",
+    "        sns.histplot(df_lzc[col], bins=40, kde=True, ax=ax, color='skyblue')\n",
+    "        ax.set_title(f'Распределение для колонки {col}', fontsize=14)\n",
+    "        ax.set_xlabel('Сложность Лемпеля — Зива')\n",
+    "        ax.set_ylabel('Клиенты')\n",
     "        ax.set_xlim(0, df_lzc[col].max()*1.1)\n",
     "\n",
     "    plt.tight_layout()\n",
