--- a/compression/lzwc.ipynb
+++ b/compression/lzwc.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,11 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"filled/transact_18_22.csv\")\n",
+    "df = pd.read_csv(\"../processed/transact_18_22.csv\")\n",
     "df.set_index(['client', 'date'], inplace=True)\n",
     "df.index = df.index.set_levels(pd.to_datetime(df.index.levels[1]), level=1)\n",
     "df = df.sort_index()\n",
-    "df"
+    "df.head(5)"
    ]
   },
   {
@@ -73,7 +72,7 @@
    "outputs": [],
    "source": [
     "lzw_df = compute_lzw_ratios_lib2(df, [\"code\"])\n",
-    "lzw_df"
+    "lzw_df.head(5)"
    ]
   },
   {
